hscrollbar fix

--- a/css/core.css
+++ b/css/core.css
@@ -3,6 +3,8 @@
 }
 html {
 	height: 100%;
+	max-width: 100%;
+	overflow-x: hidden;
 }
 body {
 	height: 100%;
