--- a/css/index.css
+++ b/css/index.css
@@ -47,7 +47,7 @@ main {
 }
 #sketch-caption {
 	position:relative;
-	left: 120%;
-	bottom: 11.66rem;
-	width: 600px;
+	left: 123%;
+	bottom: 15rem;
+	width: 36.8rem;
 }
